// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFacetGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup euiFacetGroup--vertical euiFacetGroup--gutterMedium testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiFacetGroup props gutterSize l is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup euiFacetGroup--vertical euiFacetGroup--gutterLarge"
/>
`;

exports[`EuiFacetGroup props gutterSize m is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup euiFacetGroup--vertical euiFacetGroup--gutterMedium"
/>
`;

exports[`EuiFacetGroup props gutterSize none is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup euiFacetGroup--vertical euiFacetGroup--gutterNone"
/>
`;

exports[`EuiFacetGroup props gutterSize s is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup euiFacetGroup--vertical euiFacetGroup--gutterSmall"
/>
`;

exports[`EuiFacetGroup props layout horizontal is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap euiFacetGroup euiFacetGroup--horizontal euiFacetGroup--gutterMedium"
/>
`;

exports[`EuiFacetGroup props layout vertical is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive euiFacetGroup euiFacetGroup--vertical euiFacetGroup--gutterMedium"
/>
`;
